--- a/DiscordHex/DiscordHex.csproj
+++ b/DiscordHex/DiscordHex.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.5" />
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.109.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
+    <PackageReference Include="Npgsql" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
