--- a/DiscordHex/DiscordHex.csproj
+++ b/DiscordHex/DiscordHex.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appccelerate.StateMachine" Version="4.4.0" />
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
